--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-#Ignore them BIGASS node_modules
+#them BIGASS node_modules
 **/node_modules
 
-#Ignore git stuff
+#git stuff
 *.git
 
-#Ignore logs
+#logs
 *.log
-
 *.idea
+
+#system generated crap
+.DS_Store
+.DS_Store?
