--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "rollup-plugin-postcss": "^4.0.0",
         "rollup-plugin-terser": "^7.0.2",
         "scss": "^0.2.4"
+    },
+    "dependencies": {
+        "sass": "^1.54.8"
     }
 }
